--- a/Project/MacroParser.cbp
+++ b/Project/MacroParser.cbp
@@ -11,6 +11,9 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+				</Compiler>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/MacroParser" prefix_auto="1" extension_auto="1" />
