--- a/Project/MacroParser.cbp
+++ b/Project/MacroParser.cbp
@@ -18,7 +18,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-Os" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
