Reimplemented file exploring

--- a/Project/makefile
+++ b/Project/makefile
@@ -1,2 +1,5 @@
+
+all: appli
+
 appli: command.cpp container.cpp filesystem.cpp hexa.cpp main.cpp options.cpp stringeval.cpp
-	gcc -std=c++11 command.cpp container.cpp filesystem.cpp hexa.cpp main.cpp options.cpp stringeval.cpp -o appli.exe
+	g++ -std=c++11 command.cpp container.cpp filesystem.cpp hexa.cpp main.cpp options.cpp stringeval.cpp -o appli.exe
