Deleted useless files + minor fixes
- useless files to the repo were deleted and their extension was added to gitignore file
- look command will now don't print multiple keyword, representing a junction with multiple output

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ config.txt
 *.layout
 Debug
 *.txt
+
+# mac filesystem related files
+
+# eclipse files useless to import
+*.cscope_file_list
+*.DS_STORE
