Improved file import implementation
- The code was rewritten with a new class WordDetector, in order to be more readeable.
- Fixed comments imported even when importMacroCommented disabled in the options

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,6 @@ Debug
 # mac filesystem related files
 *.DS_STORE
 
-# eclipse files useless to import
+# IDE useless files
 *.cscope_file_list
 *.depend
