Started fix for issue https://github.com/ProSurfer73/Macro-Parser/issues/38

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,12 @@
 *.obj
 config.txt
 *.layout
+Debug
+*.txt
 
-/bin/Debug/
+# mac filesystem related files
+*.DS_STORE
+
+# IDE useless files
+*.cscope_file_list
+*.depend
