--- a/Project/MacroParser.cbp
+++ b/Project/MacroParser.cbp
@@ -11,9 +11,6 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-g" />
-				</Compiler>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/MacroParser" prefix_auto="1" extension_auto="1" />
@@ -21,10 +18,11 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-Os" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-static" />
 				</Linker>
 			</Target>
 		</Build>
@@ -41,6 +39,8 @@
 		<Unit filename="filesystem.hpp" />
 		<Unit filename="hexa.cpp" />
 		<Unit filename="hexa.hpp" />
+		<Unit filename="macrospace.cpp" />
+		<Unit filename="macrospace.hpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="options.cpp" />
 		<Unit filename="options.hpp" />
