--- a/Project/MacroParser.cbp
+++ b/Project/MacroParser.cbp
@@ -3,6 +3,7 @@
 	<FileVersion major="1" minor="6" />
 	<Project>
 		<Option title="MacroParser" />
+		<Option makefile="makefile" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
@@ -19,6 +20,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-Os" />
+					<Add option="-Wredundant-move" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
