--- a/Project/MacroParser.cbp
+++ b/Project/MacroParser.cbp
@@ -47,6 +47,8 @@
 		<Unit filename="options.hpp" />
 		<Unit filename="stringeval.cpp" />
 		<Unit filename="stringeval.hpp" />
+		<Unit filename="vector.cpp" />
+		<Unit filename="vector.hpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
