--- a/Project/MacroParser.cbp
+++ b/Project/MacroParser.cbp
@@ -31,6 +31,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="closeto.cpp" />
+		<Unit filename="closeto.hpp" />
 		<Unit filename="command.cpp" />
 		<Unit filename="command.hpp" />
 		<Unit filename="config.hpp" />
