--- a/Project/MacroParser.cbp
+++ b/Project/MacroParser.cbp
@@ -31,17 +31,19 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="closeto.cpp" />
-		<Unit filename="closeto.hpp" />
+		<Unit filename="closestr.cpp" />
+		<Unit filename="closestr.hpp" />
 		<Unit filename="command.cpp" />
 		<Unit filename="command.hpp" />
 		<Unit filename="config.hpp" />
 		<Unit filename="container.cpp" />
 		<Unit filename="container.hpp" />
-		<Unit filename="filesystem.cpp" />
-		<Unit filename="filesystem.hpp" />
 		<Unit filename="hexa.cpp" />
 		<Unit filename="hexa.hpp" />
+		<Unit filename="macroloader.cpp" />
+		<Unit filename="macroloader.hpp" />
+		<Unit filename="macrosearch.cpp" />
+		<Unit filename="macrosearch.hpp" />
 		<Unit filename="macrospace.cpp" />
 		<Unit filename="macrospace.hpp" />
 		<Unit filename="main.cpp" />
