<code> Moved code. - Moved standard string oeprations into a seperate file.

--- a/Project/MacroParser.cbp
+++ b/Project/MacroParser.cbp
@@ -51,6 +51,8 @@
 		<Unit filename="options.hpp" />
 		<Unit filename="stringeval.cpp" />
 		<Unit filename="stringeval.hpp" />
+		<Unit filename="strings.cpp" />
+		<Unit filename="strings.hpp" />
 		<Unit filename="vector.hpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
