feat: parameterized macros, calculate command - parameterized macros are now implemented inside macroparser (issue: https://github.com/ProSurfer73/Macro-Parser/commit/1caf6da2d9d70ae937b19284693c1c477dcdb7a7). - dev: started to write the calculate command (but it is not functional yet) (issue: https://github.com/ProSurfer73/Macro-Parser/issues/64). - fixed compiler warnings (comparaisons between unsigned int and int for example). - moved some code.

--- a/Project/MacroParser.cbp
+++ b/Project/MacroParser.cbp
@@ -31,6 +31,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="calculate.cpp" />
+		<Unit filename="calculate.hpp" />
 		<Unit filename="closestr.cpp" />
 		<Unit filename="closestr.hpp" />
 		<Unit filename="command.cpp" />
