feat: octal value conversion. - macro parser is now able to read octal values. - please refer to the following issue for more information about it: https://github.com/ProSurfer73/Macro-Parser/issues/73.

--- a/Project/MacroParser.cbp
+++ b/Project/MacroParser.cbp
@@ -40,8 +40,8 @@
 		<Unit filename="config.hpp" />
 		<Unit filename="container.cpp" />
 		<Unit filename="container.hpp" />
-		<Unit filename="hexa.cpp" />
-		<Unit filename="hexa.hpp" />
+		<Unit filename="literals.cpp" />
+		<Unit filename="literals.hpp" />
 		<Unit filename="macroloader.cpp" />
 		<Unit filename="macroloader.hpp" />
 		<Unit filename="macrosearch.cpp" />
