fix: fixed compilation errors. - fixed the remaining compilation errors inside the file macrosearch.cpp with the Windows API. - included the source file options.cpp to the project file. (I forgot to include it and it caused linkage errors).

--- a/Project/Macroparser/Macroparser.vcxproj
+++ b/Project/Macroparser/Macroparser.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="..\macrosearch.cpp" />
     <ClCompile Include="..\macrospace.cpp" />
     <ClCompile Include="..\main.cpp" />
+    <ClCompile Include="..\options.cpp" />
     <ClCompile Include="..\specialloader.cpp" />
     <ClCompile Include="..\stringeval.cpp" />
     <ClCompile Include="..\strings.cpp" />
